artifacthub/library/general/nounsupportedgpu/1.0.0/samples/gpu-without-env-var/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-pod-disallowed
spec:
  containers:
    - name: training
      image: myrepo/custom-ml-image:v1
      resources:
        limits:
          nvidia.com/gpu: "1"
