artifacthub/library/general/nounsupportedgpu/1.0.0/samples/gpu-without-env-var/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoUnsupportedGpu
metadata:
  name: require-gpu-env-var
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages:
      - "nvidia/dcgm-exporter:*"
